# vs-code

./: How to apply a patch without whitespaces  PYTHON_LIBRARY_NOT_FOUND.md  README.md  SIGFPE_test.cc  SIGFPE_test_trap.cc  Vundle_Install_YouCompleteMe.md  best_const_static_reinter_cast.md  cgroups-docker-kubernates.md  copy_file_by_scp_error.md  cpu_and_sys_info_command.md  emplace_push_back.cc  git_diff_w  how_to_have_python2_pip19.md  pip_cannot_import_name_main.md  ram-memory.md  remote-server-connection.md  test_singleton.cc
CMake/: CMakeLists.txt  add_subdirectory.md
CMakeSample/: CMakeLists.txt  README.md  tutorial.cxx
CMakeSample/cmake_01_cmake-basics/: CMakeLists.txt
CMakeTutorialApp/: CMakeLists.txt
CMakeTutorialApp/src/math/: CMakeLists.txt
Jacek_Knowledge_Sharing/: perf.md
Paddle_Design_Pattern/: op_version_register.h
bash/: bash_manual.md
boost_variant/: .boost_variant_visitor.cc.swp  boost_variant_visitor.cc
const_functions/: a.out  const_function_1.cc  const_function_2.cc  const_function_3.cc
docker/: docker_help.md  docker_proxy_conf.md  kodekloud_lab4.md  kodekloud_lab5.md  paddlepaddle-gpu_docker.example.md
friend_class_function/: .friend_function.cc.swp  friend_class.cc  friend_function.cc
git_knowledge/: README.md
gperf_install/: procedure.md  success_install_setting_gperftools_local.md
interviews/leetcode/sliding_window/: .003.cpp.swp
life_experience/: bad_mental_status.md  diarrhea.md  dishes.md  exercise_suit_me.cc  period.md  sleep.md  weak_no_strength_cough.md
memory_check/: memory_tool.md
print_memory/: test.cc
static_singleton_decl_access/: a.out  test_map.cc  test_singleton.cc  test_singleton_cp.cc
threads/: a.out  thread_example.cc  thread_example_2.cc
vim_plugins/: ctrlp.md
virtual_function/: 2_virtual_function_2.cc  a.out  virtual_function.cc
xbyak_study/: sample_source.md
